update room & api check sys
